@@ -31,6 +31,7 @@ systemd System and Service Manager
  * systemctl:
  	- always show legend in list-unit-files, even if we know about no unit files;
  	- correct error message printed when bus_process_wait fails;
+ 	- remove “switch-root” command;
  * rpm:
  	- add user macros;
  * shared:
